[gd_scene load_steps=4 format=3 uid="uid://hlevelmvp001"]

[ext_resource type="Script" path="res://src/levels/level_mvp.gd" id="1_level"]
[ext_resource type="PackedScene" path="res://scenes/entities/player.tscn" id="2_player_scene"]
[ext_resource type="Texture2D" path="res://assets/textures/floor/dirt_grass_01.png" id="4_floor_tex"]

[node name="LevelMVP" type="Node2D"]
script = ExtResource("1_level")

[node name="Floor" type="Node2D" parent="."]
z_index = -20

[node name="FloorSprite" type="Sprite2D" parent="Floor"]
texture_filter = 1
texture_repeat = 2
scale = Vector2(0.15625, 0.15625)
texture = ExtResource("4_floor_tex")
region_enabled = true
region_rect = Rect2(0, 0, 12800, 12800)

[node name="Decals" type="Node2D" parent="."]

[node name="Footprints" type="Node2D" parent="."]

[node name="Corpses" type="Node2D" parent="."]

[node name="Entities" type="Node2D" parent="."]

[node name="Player" parent="Entities" instance=ExtResource("2_player_scene")]

[node name="Projectiles" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="HUD" type="CanvasLayer" parent="."]
layer = 5

[node name="HUDContainer" type="VBoxContainer" parent="HUD"]
anchors_preset = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 280.0
offset_bottom = 130.0

[node name="HPLabel" type="Label" parent="HUD/HUDContainer"]
layout_mode = 2
text = "HP: 100 / 100"

[node name="StateLabel" type="Label" parent="HUD/HUDContainer"]
layout_mode = 2
text = "State: PLAYING"

[node name="TimeLabel" type="Label" parent="HUD/HUDContainer"]
layout_mode = 2
text = "Time: 0.0 | Kills: 0"

[node name="WeaponLabel" type="Label" parent="HUD/HUDContainer"]
layout_mode = 2
text = "Weapon: PISTOL [1/6]"

[node name="DebugHint" type="Label" parent="HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 100.0
grow_horizontal = 0
text = "ESC - Pause | F1 - Game Over
F2 - Level Complete | F3 - Debug
LMB - Shoot | 1-6 Weapons | Wheel"
horizontal_alignment = 2
